--- a/vignettes/Week6_Spatial_Statistics/Week5_vignette.Rmd
+++ b/vignettes/Week6_Spatial_Statistics/Week5_vignette.Rmd
@@ -20,7 +20,7 @@ vignette: >
 
 This worked example shows how to:
 
-- Calculate genetic distance at the individual and population levels.
+- Calculate genetic distance at population level.
 - Perform a Mantel test to test for IBD.
 - Create Mantel correlograms for the genetic data.
 - Calculate and test Moran't I for site-level data.
@@ -42,11 +42,15 @@ All required packages should have been installed already when you installed 'Lan
 require(LandGenCourse)
 #require(tibble)
 require(EcoGenetics)
+#require(gstudio)
+#require(hierfstat)
+#require(PopGenReport)
+#require(mmod)
 #require(spdep)
 #require(SoDA)
 ```
 
-## 2. Data import and manipulatoin
+## 2. Data import and manipulation
 
 ### a) Import and subset site data
 
@@ -96,7 +100,7 @@ Snails.ecogen <- dd.ecogen[dd.ecogen[["E"]]$Spatial == TRUE,]
 Snails.ecogen
 ```
 
-### b) Import genetic data into adegenet and gstudio
+### c) Export genetic data to adegenet and gstudio
 
 'EcoGenetics' provides convenient functions for converting genetic data to and from other packages.
 
@@ -176,7 +180,7 @@ GD.pop.Dps.gstudio <-gstudio::genetic_distance(Snails.gstudio, mode = "Dps", str
 GD.pop.Jaccard.gstudio <-gstudio::genetic_distance(Snails.gstudio, mode = "Jaccard", stratum="SITE")
 ```
 
-### c) Assemble (and save) distance matrices
+### c) Assemble distance matrices
 
 We'll store the population-level genetic distances in a list 'GD.pop'.
 
@@ -198,34 +202,21 @@ GD.pop <- list(pairwiseFst.hierfstat = GD.pop.PairwiseFst.hierfstat,
                Nei.gstudio = as.dist(GD.pop.Nei.gstudio),
                Dps.gstudio = as.dist(1 - GD.pop.Dps.gstudio),
                Jaccard.gstudio = as.dist(1 - GD.pop.Jaccard.gstudio))
-round(cor(sapply(GD.pop, function(ls) as.vector(ls))),2)
+round(cor(sapply(GD.pop, function(ls) as.vector(ls))),2)[,1:2]
 ```
 
-Consider the correlations printed above. 
+Consider the correlations printed above (only the first two columns of the correlation matrix are shown). 
 
 - Correlations are high in general, except for conditional genetic distance (cGD) (see Week 13). 
 - There are some duplicate measures (with correlation = 1).
 
-### d) Genetic distances among individuals 
+Note: the following functions calculate distance matrices at the individual level:
 
-This part is commented out with '#' as it takes longer to calculate. 
+- PopGenReport::gd.smouse()
+- adegenet::propShared()
+- gstudio::genetic_distance(mode = "AMOVA")
 
-```{r}
-#GD.ind.smouse <- PopGenReport::gd.smouse(Snails.genind, verbose=FALSE) 
-#GD.ind.propShared <- adegenet::propShared(Snails.genind)    
-#GD.ind.AMOVA.gstudio <- gstudio::genetic_distance(Snails.gstudio, mode = "AMOVA")
-```
-
-Assemble individual-level distance matrices:
-
-```{r}
-#GD.ind <- list(Smouse.PopGenReport = GD.ind.smouse,
-#               propShared.adegenet = as.dist(1 - GD.ind.propShared),
-#               Amova.gstudio = as.dist(GD.ind.AMOVA.gstudio))
-#round(cor(sapply(GD.ind, function(ls) as.vector(ls))),2)
-```
-
-### e) Export genetic distance matrices
+### d) Export genetic distance matrices
 
 Optional: Use 'save' to save an R object to your file system, and 'load' to read it in again. Note: the default setting is that 'save' will overwrite existing files with the same name.
 
@@ -241,50 +232,51 @@ The code is commented out with '#'. To run it, remove the '#'. The first part cr
 
 ## 4. Perform a Mantel test to test for IBD
 
-First, we calculate geographic (Euclidean) distances 'Dgeo' with the 'dist' function.
+First, we calculate geographic (Euclidean) distances 'Dgeo' with the 'dist' function, using the metric coordinates X and Y.
 
 ```{r}
 Dgeo <- dist(dd.spatial@data[,c("X", "Y")])
 ```
 
-Then we perform a Mantel test for one population-level measure of genetic distance (here: proportion of shared alleles).
+### a) Visually check linearity
+
+Before we quantify the linear relationship between genetic and geographic distances, let's check visually whether the relationship is indeed linear. To start, we will define genetic distance Dgen based on proportion of shared alleles.
 
 ```{r}
-IBD <- ade4::mantel.randtest(GD.pop$propShared.PopGenReport,Dgeo)
+par(mar=c(4,4,0,0))
+Dgen <- GD.pop$propShared.PopGenReport
+dens <- MASS::kde2d(Dgeo, Dgen, n=300)
+myPal <- colorRampPalette(c("white","blue","gold","orange","red"))
+plot(Dgeo, Dgen, pch=20, cex=0.5,  
+    xlab="Geographic Distance", ylab="Genetic Distance")
+image(dens, col=transp(myPal(300), 0.7), add=TRUE)
+abline(lm(Dgen ~ Dgeo))
+lines(loess.smooth(Dgeo, Dgen), col="red")
+```
+
+There seems to be a slight increase of genetic distance over shorter distances and then some decrease over large geographic distances. These may cancel out if we fit a linear model to the entire point cloud.
+
+### b) Perform Mantel test
+
+Next, we perform a Mantel test with the function 'mantel.randtest' from the 'ade4' package.
+
+```{r}
+IBD <- ade4::mantel.randtest(Dgen,Dgeo)
 IBD
 attributes(IBD)
 ```
 
 For this measures of genetic diversity, the Mantel correlation was actually negative! What about the other measures?
 
-Here we use 'lapply' to apply the function 'mantel.rantest' to each genetic distance matrix in GD.pop. Then we use 'sapply' to extract two values for each distance matrix: 'obs' is the Mantel r statistic, and 'pvalue' is the p-value. We can find these names with the function 'attributes' (see above).
+Here we use 'lapply' to apply the function 'mantel.randtest' to each genetic distance matrix in GD.pop. Then we use 'sapply' to extract two values for each distance matrix: 'obs' is the Mantel r statistic, and 'pvalue' is the p-value. We can find these names with the function 'attributes' (see above).
 
 ```{r}
 Mantel.test <- lapply(GD.pop, function(x) ade4::mantel.randtest(x,Dgeo))
 data.frame(Mantel.r = sapply(Mantel.test, function(x) x$obs),
            p.value = sapply(Mantel.test, function(x) x$pvalue))
 ```
+
 The nature of the result did not depend on the measure of genetic diversity used. Does this mean that there is no indication of IBD in the data? Let's look at this in a different way, with a Mantel correlogram.
-
-### b) Visually check linearity
-
-
-```{r fig.width=8, fig.height=12}
-par(mfrow=c(5, 3))
-for(i in 1:length(GD.pop))
-{
-  dens <- MASS::kde2d(Dgeo, GD.pop[[i]], n=300)
-  myPal <- colorRampPalette(c("white","blue","gold","orange","red"))
-  plot(Dgeo, GD.pop[[i]], pch=20, cex=0.5, axes=FALSE, 
-       xlab="Geographic Distance", ylab="Genetic Distance")
-  image(dens, col=transp(myPal(300), 0.7), add=TRUE)
-  abline(lm(GD.pop[[i]] ~ Dgeo))
-  lines(loess.smooth(Dgeo, GD.pop[[i]]), col="red")
-  mtext(text=names(GD.pop)[i], side=3, line=1, adj=0)
-}
-```
-
-There seems to be a general pattern across distance matrices, with a slight increas of genetic distance over shorter distances and then som decrease over large distances. The odd one out is again conditional genetic distance cGD (for good reason: see Week 13).
 
 ## 5. Create Mantel correlogram for genetic data
 
@@ -357,62 +349,66 @@ EcoGenetics::eco.plotCorrelog(corm.20)
 EcoGenetics::eco.plotCorrelog(corm.50)
 ```
 
-We can access the p-value of the first distance class:
+Let's compare the observed Mantel r statistic, p-value, number of pairs in the first distance class and their mean distance, as well as the definition of the first lag interval. We can get all of this by extracting the first line from each object. 
+
+The lag intervals are stored only in the row names, and we need to extract those separately and add them as a colum.
 
 ```{r}
-c(Sturge.pval = EcoGenetics::ecoslot.OUT(corm)[[1]][1,4],
-  size.20.pval = EcoGenetics::ecoslot.OUT(corm.20)[[1]][1,4],
-  size.50.pval = EcoGenetics::ecoslot.OUT(corm.50)[[1]][1,4])
+Lag1.def <- data.frame(rbind(Sturge = EcoGenetics::ecoslot.OUT(corm)[[1]][1,],
+      size.20 = EcoGenetics::ecoslot.OUT(corm.20)[[1]][1,],
+      size.50 = EcoGenetics::ecoslot.OUT(corm.50)[[1]][1,]))
+Lag1.def$bin <- c(row.names(EcoGenetics::ecoslot.OUT(corm)[[1]])[1],
+              row.names(EcoGenetics::ecoslot.OUT(corm.20)[[1]])[1],
+              row.names(EcoGenetics::ecoslot.OUT(corm.50)[[1]])[1])
+Lag1.def
 ```
 
-So none of the three distance class definitions (Sturge's rule, size = 20, size = 50) resulted in statistically significant p-values. How did the magnitude change?
+- None of the three distance class definitions (Sturge's rule, size = 20, size = 50) resulted in statistically significant p-values.
+- The Mantel correlation in the first distance lag was strongest for Sturge's rule. 
+- For the first distance class, Sturge's rule resulted in 28 pairs and a mean distance between those of the other two lag definitions.
 
-```{r}
-c(Sturge.obs = EcoGenetics::ecoslot.OUT(corm)[[1]][1,2],
-  size.20.obs = EcoGenetics::ecoslot.OUT(corm.20)[[1]][1,2],
-  size.50.obs = EcoGenetics::ecoslot.OUT(corm.50)[[1]][1,2])
+Overall, Sturge's rule to define distance classes seems to be a good compromise. What is the trade-off, i.e., what happens if distance lags are defined too narrowly or too widely?
+
+It can be really helpful to plot the distribution of distances among the pairs and compare it to the distance intervals:
+
+```{r fig.width=8, fig.height=6, fig.show='hold'}
+par(mfrow=c(3,1))
+
+hist(Dgeo, nclass=30, main="Sturge's rule", axes=F, xlab="", ylab="")
+for(i in 1:length(EcoGenetics::ecoslot.BREAKS(corm))){
+  lines(rep(EcoGenetics::ecoslot.BREAKS(corm)[i], 2), c(0,50), col="blue")}
+
+hist(Dgeo, nclass=30, main = "20 pairs per lag", axes=F)
+for(i in 1:length(EcoGenetics::ecoslot.BREAKS(corm.20))){
+  lines(rep(EcoGenetics::ecoslot.BREAKS(corm.20)[i], 2), c(0,50), col="blue")}
+
+hist(Dgeo, nclass=30, main = "50 pairs per lag", axes=F)
+for(i in 1:length(EcoGenetics::ecoslot.BREAKS(corm.50))){
+  lines(rep(EcoGenetics::ecoslot.BREAKS(corm.50)[i], 2), c(0,50), col="blue")}
 ```
 
-The Mantel correlation in the first distance lag was strongest for Sturge's rule.
+Compare what happens at larger distances. Do you think Sturge's rule does a good job for these as well?
 
-In summary, there was some variation between different lag definitions, but the overall results did not change. 
+Unlike a Mantel test, where all pairs are considered, in geostatistics we typically interpret only values for  distances up to a certain threshold, e.g. half the maximum distance, for two reasons: 
 
-### c) Checking for non-linear relationship
+- There are few pairs in of these bins, making estimates highly variable.
+- Not all pairs contribute (equally) to the largest distance classes (those in the center of the study area are not involved in very large distances).
 
-In the following, we'll use Sturge's rule to define distance classes.
-
-Here we'll use two ways to account for potential non-linearity:
-
-- Linearize by calculating d/(1-d) (linearizing manually)
-- Calculate rank correlation (using option 'method="spearman"')
-
-```{r}
-D <- GD.pop$propShared.PopGenReport / (1 - GD.pop$propShared.PopGenReport)
-corm.lin <- EcoGenetics::eco.cormantel(M = D, XY = dd.spatial@coords,  
-            nsim = 99, latlon=TRUE, alternative="less")
-
-corm.rank <- EcoGenetics::eco.cormantel(M = GD.pop$propShared.PopGenReport, 
-             XY = dd.spatial@coords,  nsim = 199, latlon=TRUE,
-             alternative="less", method="spearman")
-
-c(Sturge.pval = EcoGenetics::ecoslot.OUT(corm)[[1]][1,4],
-  lin.pval = EcoGenetics::ecoslot.OUT(corm.lin)[[1]][1,4],
-  rank.pval = EcoGenetics::ecoslot.OUT(corm.rank)[[1]][1,4])
-
-c(Sturge.obs = EcoGenetics::ecoslot.OUT(corm)[[1]][1,2],
-  line.obs = EcoGenetics::ecoslot.OUT(corm.lin)[[1]][1,2],
-  rank.obs = EcoGenetics::ecoslot.OUT(corm.rank)[[1]][1,2])
-```
-
-Linearization actually weakened the relationship, whereas the rank correlation provided essentially the same result as the linear ("pearson") correlation. Non-linearity can thus not explain the absence of significant positive spatial autocorrelation.
-
-### d) Alternative measures of genetic distances
+### c) Alternative measures of genetic distances
 
 Which measure of genetic distance would provide the strongest Mantel correlation in the first distance class for this data set? 
 
-Here we will cycle through all genetic distance matrices in 'GD.pop' and calculate a Mantel correlogram with Sturge's rule (not linearized, method="pearson"). This may take a while.
+Here we will cycle through all genetic distance matrices in 'GD.pop' and calculate a Mantel correlogram with Sturge's rule (not linearized, method="pearson"). This may take a while. 
+
+Note: the code that calculates 'corm.GD.pop' is included here twice, first commented out, then with the option 'include=FALSE'. This avoids printing out a lot of unnecessary output while still showing the (commented out) code in the .html version of the file.
 
 ```{r}
+#corm.GD.pop <- lapply(GD.pop, function(x) EcoGenetics::eco.cormantel(M = x, 
+#                      XY = dd.spatial@coords,  nsim = 199, latlon=TRUE,
+#                      alternative="less"))
+```
+
+```{r include=FALSE}
 corm.GD.pop <- lapply(GD.pop, function(x) EcoGenetics::eco.cormantel(M = x, 
                       XY = dd.spatial@coords,  nsim = 199, latlon=TRUE,
                       alternative="less"))
@@ -434,7 +430,7 @@ EcoGenetics::eco.plotCorrelog(corm.GD.pop$Nei.adegenet)
 
 The statistically significant spatial autocorrelation was limited to the first distance lag. 
 
-## 6.Specify spatial weights and calculate Moran's I
+## 6. Specify spatial weights and calculate Moran's I
 
 In this part, we'll quantify and test Moran's I for the site-level data used in Week 4 lab (including site-level Fst, genetic diversity, and predictor variables).
 
@@ -459,19 +455,25 @@ Here we use types 1 - 6 to define neighbors in different ways. Then we plot each
 Note: this function expects metric spatial coordinates (e.g., UTM). Hence we use the columns 'X' and 'Y' (first two columns) that we added to dd.spatial@data.
 
 ```{r fig.width=8, fig.height=6, fig.show='hold'}
-nb.del <- adegenet::chooseCN(xy = dd.spatial@data[,1:2], result.type = "nb", plot.nb = FALSE, type = 1)
-nb.gab <- adegenet::chooseCN(xy = dd.spatial@data[,1:2], result.type = "nb", plot.nb = FALSE, type = 2)
-nb.rel <- adegenet::chooseCN(xy = dd.spatial@data[,1:2], result.type = "nb", plot.nb = FALSE, type = 3)
-nb.mst <- adegenet::chooseCN(xy = dd.spatial@data[,1:2], result.type = "nb", plot.nb = FALSE, type = 4)
-nb.nbd <- adegenet::chooseCN(xy = dd.spatial@data[,1:2], result.type = "nb", plot.nb = FALSE, type = 5, d1=100, d2=15000)
-nb.4nn <- adegenet::chooseCN(xy = dd.spatial@data[,1:2], result.type = "nb", plot.nb = FALSE, type = 6, k = 4)
+nb.del <- adegenet::chooseCN(xy = dd.spatial@data[,1:2], 
+          result.type = "nb", plot.nb = FALSE, type = 1)
+nb.gab <- adegenet::chooseCN(xy = dd.spatial@data[,1:2], 
+          result.type = "nb", plot.nb = FALSE, type = 2)
+nb.rel <- adegenet::chooseCN(xy = dd.spatial@data[,1:2], 
+          result.type = "nb", plot.nb = FALSE, type = 3)
+nb.mst <- adegenet::chooseCN(xy = dd.spatial@data[,1:2], 
+          result.type = "nb", plot.nb = FALSE, type = 4)
+nb.nbd <- adegenet::chooseCN(xy = dd.spatial@data[,1:2], 
+          result.type = "nb", plot.nb = FALSE, type = 5, d1=100, d2=15000)
+nb.4nn <- adegenet::chooseCN(xy = dd.spatial@data[,1:2], 
+          result.type = "nb", plot.nb = FALSE, type = 6, k = 4)
 
 par(mfrow=c(2,3), mai=c(0.1,0.1,0.1, 0.1))
 plot(nb.del, coords=dd.spatial@data[,1:2]); title(main="Delaunay")
 plot(nb.gab, coords=dd.spatial@data[,1:2]); title(main="Gabriel")
 plot(nb.rel, coords=dd.spatial@data[,1:2]); title(main= "Rel. neighbors")
-plot(nb.mst, coords=dd.spatial@data[,1:2]); title(main= "Min. spanning tree")
-plot(nb.nbd, coords=dd.spatial@data[,1:2]); title(main = "Neighbor distancer")
+plot(nb.mst, coords=dd.spatial@data[,1:2]); title(main= "Min spanning tree")
+plot(nb.nbd, coords=dd.spatial@data[,1:2]); title(main = "Neighbor distance")
 plot(nb.4nn, coords=dd.spatial@data[,1:2]); title(main = "4 nearest neighbors")
 par(mfrow=c(1,1))
 ```
