--- a/vignettes/Week2_Spatial_Data/Week2_vignette.Rmd
+++ b/vignettes/Week2_Spatial_Data/Week2_vignette.Rmd
@@ -48,10 +48,11 @@ We will extract values at sampling point locations and within a local neighborho
 ### c) Required R libraries
 
 ```{r message=FALSE, warning=TRUE}
+require(LandGenCourse)
 require(sp)
 require(raster)
 require(GeNetIt)
-require(tmaptools) 
+#require(tmaptools) 
 require(SDMTools) # for landscape metrics
 require(tibble)
 ```
@@ -108,7 +109,10 @@ For more information on CRS, see: https://www.nceas.ucsb.edu/~frazier/RSpatialGu
 
 We know that these coordinates are UTM zone 11 (Northern hemisphere) coordinates, hence we can use a helper function to find the correct 'proj4string', using function 'get_proj4' from the 'tmaptools' package. (For the Southern hemisphere, you would add 's' after the zone: "utm11s"). Here we call the function and the package simultaneously (this is good practice, as it helps keep track of where the functions in your code come from).
 
+Note: Package 'tmaptools' has not been automatically installed with 'LandGenCourse' to avoid incompatibilities. To use the function, you may first need to install 'tmaptools' by running the line with 'install.packages("tmaptools")' without '#'.
+
 ```{r}
+#install.packages("tmaptools")
 proj4string(Sites.sp) <- tmaptools::get_proj4("utm11")
 ```
 
@@ -432,10 +436,8 @@ Done!
 
 Note: check this week's bonus material if you want to see how to use the new 'sf' library for spatial data, and how to export the site data to an shapefile that you can import into a GIS.
 
+The following code detaches all packages except for some basic ones:
+
 ```{r message=FALSE, warning=TRUE, include=FALSE}
-detach("package:raster", unload=TRUE)
-detach("package:sp", unload=TRUE)
-detach("package:GeNetIt", unload=TRUE)
-detach("package:tmaptools", unload=TRUE)
-detach("package:SDMTools", unload=TRUE)
+LandGenCourse::detachAllPackages()
 ```
