--- a/vignettes/Week4_Metapopulation_Genetics/Week4_vignette.Rmd
+++ b/vignettes/Week4_Metapopulation_Genetics/Week4_vignette.Rmd
@@ -55,7 +55,7 @@ require(EcoGenetics)
 #require(sp)
 #require(ggmap)
 #require(ggplot2)
-#require(car)          
+#require(car)  
 ```
 
 ### d) Import data
@@ -186,7 +186,7 @@ Is the model valid? Let's check the residual plots:
 
 ```{r fig.height=7, fig.width=8}
 par(mfrow=c(2,2))
-plot(mod.diff, labels.id = dd.spatial@data$SITE)
+plot(mod.diff, labels.id = names(residuals(mod.diff)))
 par(mfrow=c(1,1))
 ```
 
@@ -205,27 +205,32 @@ dd.spatial@data$Residuals <- mod.diff$residuals
 sp::bubble(dd.spatial, zcol = "Residuals", col = c("red", "blue"))
 ```
 
-Questions:
-
-- What is the biological interpretation of a positive residual for site-level FST? What processes might lead to this?
-- And for a negative residual?
-
 Or on a map from the internet, using 'qmplot' from the 'ggmap' package. It expects lat-lon coordinates that are stored in a data frame, not a SpatialPointsDataFrame. If we convert 'dd.spatial' with the function  'as.data.frame', R will return a data frame with the site variables and with the coordinates appended as additional columns. The code below does the following (see Week 4 video, part 2):
 
-- Creates an index 'a' that identifies two potential outliers by their row names,
+- Creates an index 'a' that lists identifies the two potential outliers by their row names (logical),
+- Creates a vectors 'a2' that contains the row numbers of the potential outliers, 
 - Grabs a grayscale map from the internet, plots all ponds with size and color according to their residuals, and stores the resulting map in the object 'myMap'.
 - Plots the map and adds labels for the two potential outliers.
 
-Note: here we specify 'zoom = 12', whereas the default 'zoom = "auto" would set it at 11 for this example. For a 'toner-lite' map from 'stamen', the zoom level affects the resolution and level of detail of the backgroud map, not the spatial extent. For a 'google' map, among others, zoom affects level of detail and the extent. Don't ask us why...  
 
-```{r fig.height=7, fig.width=8, message=FALSE}
-a <- is.element(dd.spatial@data$SITE, c("DESB", "PTC"))
+```{r message=FALSE}
+a <- is.element(rownames(dd.spatial@data), c("32", "42"))
+a2 <- c(1:nrow(dd.spatial@data))[a]
 myMap <- ggmap::qmplot(Longitude, Latitude,  data = as.data.frame(dd.spatial),
-              source = "stamen", maptype = "toner-lite", zoom = 12,  
+              source = "stamen", maptype = "toner-lite",  
               col = sign(Residuals), size = abs(Residuals))
-myMap + ggplot2::geom_text(data = as.data.frame(dd.spatial[a,]),
+myMap + ggplot2::geom_text(data = as.data.frame(dd.spatial[a2,]),
                    mapping = ggplot2::aes(Longitude, Latitude, label = SITE),
                    size = 4, col = "black", vjust = 0, nudge_y = -0.015)
+```
+
+Exports the last plot as a 'png' (Portable Network Graphics) file, specifying canvas size and resolution. To run the code, uncomment by removing '#' at the beginning of each line.
+
+```{r message=FALSE}
+#require(here)
+#if(!dir.exists(paste0(here(),"/output"))) dir.create(paste0(here(),"/output"))
+#ggplot2::ggsave(paste0(here(),"/output/ResidualMap.png"), 
+#               width = 7, height = 5.5, units = "in",  dpi = 300)
 ```
 
 What might explain the large residuals for the two sites 'PTC' and 'DESB'?
@@ -233,23 +238,13 @@ What might explain the large residuals for the two sites 'PTC' and 'DESB'?
 - Site 'PTC' lies on the tip of a peninsula and thus is very isolated geographically.
 - Site 'DESB' is a very instable site that can frequently dry out during the dry season, as it is shallow and lies in the comparatively dry northern part of the island. In addition, although 'DESB' is surrounded by many ponds, these ponds never get connected to 'DESB' hydrologically during the rainy season. Therefore, immigration can only occur via cattle or birds, which are much less important drivers of gene flow than immigration by hydrological connectivity during the rainy season.  
 
-The code below exports the last plot as a 'png' (Portable Network Graphics) file, specifying canvas size and resolution. To run the code, un-comment the lines by removing '#' at the beginning of each line.
-
-```{r}
-#require(here)
-#if(!dir.exists(paste0(here(),"/output"))) 
-#      {dir.create(paste0(here(),"/output"))}
-#ggplot2::ggsave("ResidualMap.png", width = 7, height = 5.5, 
-#                  units = "in", dpi = 300)
-```
-
 ### d) Regression model without outliers
 
 We can use the same index 'a' to exclude the potential outliers from the regression model:
 
 ```{r}
 mod.diff.minus2 <- lm(scale(FST.GESTE) ~ scale(NLT) + scale(C), 
-               data=dd.spatial[a==FALSE,])
+               data=dd.spatial[-a2,])
 summary(mod.diff.minus2)
 ```
 
@@ -259,8 +254,7 @@ summary(mod.diff.minus2)
 
 ```{r fig.height=7, fig.width=8}
 par(mfrow=c(2,2))
-plot(mod.diff.minus2, 
-     labels.id = dd.spatial@data$SITE[a==FALSE])
+plot(mod.diff.minus2, labels.id = names(residuals(mod.diff)))
 par(mfrow=c(1,1))
 ```
 
@@ -322,9 +316,8 @@ Lets examine the correlation between gene diversity (He) and site-specific Fst:
 cor(dd.site$He, dd.site$FST.GESTE, use = "pairwise.complete")
 ```
 
-Question:
+There are a number of possible reasons for such a correlation. Can you put forward some hypotheses to explain this relationship? See Lamy et al. (2012) for their interpretation.
 
-- There are a number of possible reasons for such a correlation. Can you put forward some hypotheses to explain this relationship? See Lamy et al. (2012) for their interpretation.
 
 ## 6. Effect of recent extinction events
 
@@ -404,10 +397,9 @@ pwr::pwr.t.test(power = 0.8, d = -0.5, alternative = "less")
 
 More than 20 sites in each group would have been needed to detect a large effect, or more than 50 per group to detect a medium effect, with a power of 80%.
 
-Hence, these particular results are inconclusive. There was a trend showing a large effect size but power was very low. This aspect of the study should ideally be repeated with a larger sample size before reaching any conclusions.
+Hence, these particular results are inconclusive. There was a trend showing a large effect size but power was very low. This aspect of the study should ideally be repeated with a larger sample size before reaching any conclusions. 
 
 Note however that using additional evidence (e.g., population assignment tests), Lamy et al. (2012) concluded that extinctions were in fact less common in this system than previously assumed – in many cases of apparent extinction, individuals may still be present but just not detected.
-
 
 ```{r message=FALSE, warning=TRUE, include=FALSE}
 LandGenCourse::detachAllPackages()
